# novel_packer

./: .gitignore  Cargo.toml  build.bat  chapter.js  image.js  new.js  novel.js  readme.md  show-content-.js  show-content.js
assets/: epub-style.css
config/: bilinovel.json  browser.json  browser_check.json  chapter.json  check.json  config.json  http.json  http_check.json  images.json  novel.json
extensions/: guess.js  inject.js  manifest.json  worker.js
extensions/lite images downloader/: content.js
scripts/: chapter.js  check.js  images.js  novel.js
src/: downloader.rs  main.rs
src/core/: get_index.rs  get_struct.rs  init.rs  mod.rs  singlefile.rs
src/source/: mod.rs
src/source/bilinovel/: extract.rs  mod.rs  parser.rs  singlefile.rs  types.rs
src/source/bilinovel/download/: mod.rs
src/utils/: check_single_file.rs  config.rs  mod.rs  progress_bar.rs
src/utils/browser/: browser_server.rs  mod.rs
src/utils/download/: downl.rs  mod.rs  types.rs
src/utils/epub/: default_css.rs  epub.rs  mod.rs
src/utils/html/: mod.rs
src/utils/httpclient/: http.rs  http_async.rs  mod.rs  types.rs
src/utils/httpserver/: config.rs  controller.rs  mod.rs  multipart.rs  server.rs
src/utils/input/: mod.rs
src/utils/progressbar/: mod.rs  progress_monitor.rs
src/utils/terminal/: mod.rs
