[package]
name = "singlefile-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
futures = "0.3"

#解析html 
scraper = { version = "0.24.0", features = ["atomic"] }
#解析url
url = "2.5.5"
# idna = "0.5.0"

#日志相关
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

#进度条
indicatif = "0.18.0"

#
reqwest = { version = "0.12.23", features = ["json", "blocking", "cookies"] }
moka = { version = "0.12.10", features = ["sync", "future"] }

#命令行工具
clap = { version = "4.5.47", features = ["derive"] }

#错误处理
anyhow = "1.0.99"
#临时文件
tempfile = "3.21.0"

#终端优化
colored = "3.0.0"
crossterm = "0.29.0"

#html转化为文本
html2text = "0.15.3"
#异步trait
async-trait = "0.1.89"
#lazy哈希表
once_cell = "1.21.3"

visdom = { version = "1.0.3", features = ["full"] }

tiny_http = "0.12"
#日志
env_logger = "0.11.8"
log = "0.4.28"

sanitize-filename = "0.6.0"
regex = "1.11.2" #正则表达式
base64 = "0.22.1"   #base64
epub-builder = "0.8.0"  #epub构建器
uuid = "1.18.1" #生成唯一id
chrono = "0.4.41"  #生成时间
