[package]
name = "novel-packer"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
futures = "0.3"

#解析html 
scraper = { version = "0.24.0", features = ["atomic"] }
#解析url
url = "2.5.5"

#日志相关
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"

#进度条
indicatif = "0.18.0"

#http客户端
reqwest = { version = "0.12.23", features = ["json", "blocking", "cookies"] }
moka = { version = "0.12.10", features = ["sync", "future"] }


#错误处理
anyhow = "1.0.99"
#临时文件
tempfile = "3.21.0"

#终端优化
colored = "3.0.0"
crossterm = "0.29.0"

#html转化为文本
html2text = "0.15.3"
#异步trait
async-trait = "0.1.89"

once_cell = "1.21.3"    #lazy哈希表
visdom = { version = "1.0.3", features = ["full"] }     #html操作
tiny_http = "0.12"  #http服务器
regex = "1.11.2"    #正则表达式
base64 = "0.22.1"   #base64
epub-builder = "0.8.0"  #epub构建器

ctrlc = "3.5.0"

bincode = { version = "2.0.1", features = ["serde"] }  # 添加 serde 特性
flate2 = "1.1.2"
memmap2 = "0.9.8"
chrono = "0.4.42"

